# Q-RECON

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: image_community_forensics.yaml  image_community_forensics_analytic.yaml  image_community_forensics_cnn_lbfgs.yaml  image_community_forensics_lenet_lbfgs.yaml  smoke.yaml  time_2026_direct.yaml  time_gifteval_analytic.yaml  time_gifteval_patchtst.yaml  time_gifteval_quantum.yaml  time_gifteval_transformer.yaml  time_synthetic_multivariate_itransformer.yaml
docs/: ANF_ORACLE_OPTIMIZATION.md  ARBITRARY_DEPTH_FIXED_POINT_ORACLE.md  ARBITRARY_DEPTH_FIXED_POINT_Z3_BASELINE.md  BATCH_GRADIENT_NONIDENTIFIABILITY.md  BATCH_GRADIENT_ORACLE.md  CCF_A_EVIDENCE_LEDGER.md  CCF_A_READINESS.md  CHANNEL_PERMUTATION_FIBRE.md  CHANNEL_PERMUTATION_NONIDENTIFIABILITY.md  CHANNEL_PERMUTATION_TRAINING_TRANSCRIPTS.md  CHANNEL_SIDE_INFORMATION_PHASE_DIAGRAM.md  CLASSICAL_BATCH_BASELINES.md  COHERENT_ORACLE_SPEC.md  DATASETS.md  DEEP_REVERSIBLE_MLP_ORACLE.md  EMPIRICAL_CANDIDATE_LOADING.md  END_TO_END_COST_PROTOCOL.md  EXACT_OBSERVATION_VERIFIER.md  EXPERIMENTAL_EVIDENCE_UPDATE_2026_07_15.md  EXPLICIT_DATA_LOADING_NO_ADVANTAGE.md  FINAL_HEAD_GRADIENT_STABILITY.md  FIXED_POINT_MLP_EXACT_OBSERVATION.md  FIXED_POINT_MLP_ORACLE.md  FIXED_POINT_REVERSIBLE_COMPILATION.md  FOCUSED_CCF_A_PAPER_BLUEPRINT.md  GRADIENT_RECONSTRUCTION_ORACLE.md  KNOWN_TARGET_GRADIENT_ORACLE_FIBRES.md  KNOWN_TARGET_GRADIENT_STABILITY.md  KNOWN_TARGET_PACKED_PROBES.md  KNOWN_TARGET_QUERY_COMPRESSION.md  KNOWN_TARGET_QUERY_OPTIMALITY.md  MANIFEST_DRIVEN_BENCHMARKS.md  (+28 more)
(+263 files in other folders)
