[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-recon"
version = "0.1.0"
description = "Identifiability-aware quantum/classical training-data reconstruction research framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "torchvision>=0.17",
  "datasets>=3.0",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
quantum = ["pennylane>=0.40"]
test = ["pytest>=8.0"]

[project.scripts]
qrecon = "qrecon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

